The text in index.html has been slightly modified just for having something to git-push. The git-push serves as a trigger for the workflow defined in cicd.yaml

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
 
         <section class="card">
             <div class="row">
-                <button id="checkBtn">Check backend</button>
+                <button id="checkBtn">Check backend ...</button>
                 <span id="status" class="status">Checking…</span>
             </div>
             <pre id="output" class="output">(waiting for response)</pre>
